--- a/02-Preproceso.ipynb
+++ b/02-Preproceso.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "95032491",
    "metadata": {},
    "outputs": [
@@ -18,35 +18,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting scikit-learn\n",
-      "  Downloading scikit_learn-1.8.0-cp313-cp313-win_amd64.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (1.8.0)\n",
       "Requirement already satisfied: numpy>=1.24.1 in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from scikit-learn) (2.2.6)\n",
       "Requirement already satisfied: scipy>=1.10.0 in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from scikit-learn) (1.16.3)\n",
-      "Collecting joblib>=1.3.0 (from scikit-learn)\n",
-      "  Downloading joblib-1.5.3-py3-none-any.whl.metadata (5.5 kB)\n",
-      "Collecting threadpoolctl>=3.2.0 (from scikit-learn)\n",
-      "  Downloading threadpoolctl-3.6.0-py3-none-any.whl.metadata (13 kB)\n",
-      "Downloading scikit_learn-1.8.0-cp313-cp313-win_amd64.whl (8.0 MB)\n",
-      "   ---------------------------------------- 0.0/8.0 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 0.0/8.0 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 0.0/8.0 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 0.0/8.0 MB ? eta -:--:--\n",
-      "   -- ------------------------------------- 0.5/8.0 MB 3.6 MB/s eta 0:00:03\n",
-      "   ------ --------------------------------- 1.3/8.0 MB 4.2 MB/s eta 0:00:02\n",
-      "   ----------- ---------------------------- 2.4/8.0 MB 4.2 MB/s eta 0:00:02\n",
-      "   --------------- ------------------------ 3.1/8.0 MB 4.1 MB/s eta 0:00:02\n",
-      "   ------------------- -------------------- 3.9/8.0 MB 4.2 MB/s eta 0:00:01\n",
-      "   ------------------------ --------------- 5.0/8.0 MB 4.3 MB/s eta 0:00:01\n",
-      "   ---------------------------- ----------- 5.8/8.0 MB 4.3 MB/s eta 0:00:01\n",
-      "   -------------------------------- ------- 6.6/8.0 MB 4.3 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 7.3/8.0 MB 4.3 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 7.3/8.0 MB 4.3 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 7.6/8.0 MB 3.5 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 8.0/8.0 MB 3.5 MB/s eta 0:00:00\n",
-      "Downloading joblib-1.5.3-py3-none-any.whl (309 kB)\n",
-      "Downloading threadpoolctl-3.6.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: threadpoolctl, joblib, scikit-learn\n",
-      "Successfully installed joblib-1.5.3 scikit-learn-1.8.0 threadpoolctl-3.6.0\n",
+      "Requirement already satisfied: joblib>=1.3.0 in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from scikit-learn) (1.5.3)\n",
+      "Requirement already satisfied: threadpoolctl>=3.2.0 in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from scikit-learn) (3.6.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -66,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "06595838",
    "metadata": {},
    "outputs": [
@@ -74,16 +50,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting category-encoders\n",
-      "  Downloading category_encoders-2.9.0-py3-none-any.whl.metadata (7.9 kB)\n",
+      "Requirement already satisfied: category-encoders in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (2.9.0)\n",
       "Requirement already satisfied: numpy>=1.14.0 in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from category-encoders) (2.2.6)\n",
       "Requirement already satisfied: pandas>=1.0.5 in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from category-encoders) (2.2.3)\n",
-      "Collecting patsy>=0.5.1 (from category-encoders)\n",
-      "  Downloading patsy-1.0.2-py2.py3-none-any.whl.metadata (3.6 kB)\n",
+      "Requirement already satisfied: patsy>=0.5.1 in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from category-encoders) (1.0.2)\n",
       "Requirement already satisfied: scikit-learn>=1.6.0 in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from category-encoders) (1.8.0)\n",
       "Requirement already satisfied: scipy>=1.0.0 in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from category-encoders) (1.16.3)\n",
-      "Collecting statsmodels>=0.9.0 (from category-encoders)\n",
-      "  Downloading statsmodels-0.14.6-cp313-cp313-win_amd64.whl.metadata (9.8 kB)\n",
+      "Requirement already satisfied: statsmodels>=0.9.0 in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from category-encoders) (0.14.6)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\troya\\appdata\\roaming\\python\\python313\\site-packages (from pandas>=1.0.5->category-encoders) (2.9.0.post0)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas>=1.0.5->category-encoders) (2025.2)\n",
       "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas>=1.0.5->category-encoders) (2025.2)\n",
@@ -91,25 +64,6 @@
       "Requirement already satisfied: threadpoolctl>=3.2.0 in c:\\users\\troya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from scikit-learn>=1.6.0->category-encoders) (3.6.0)\n",
       "Requirement already satisfied: packaging>=21.3 in c:\\users\\troya\\appdata\\roaming\\python\\python313\\site-packages (from statsmodels>=0.9.0->category-encoders) (24.2)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\troya\\appdata\\roaming\\python\\python313\\site-packages (from python-dateutil>=2.8.2->pandas>=1.0.5->category-encoders) (1.17.0)\n",
-      "Downloading category_encoders-2.9.0-py3-none-any.whl (85 kB)\n",
-      "Downloading patsy-1.0.2-py2.py3-none-any.whl (233 kB)\n",
-      "Downloading statsmodels-0.14.6-cp313-cp313-win_amd64.whl (9.5 MB)\n",
-      "   ---------------------------------------- 0.0/9.5 MB ? eta -:--:--\n",
-      "   -- ------------------------------------- 0.5/9.5 MB 3.5 MB/s eta 0:00:03\n",
-      "   ----- ---------------------------------- 1.3/9.5 MB 3.3 MB/s eta 0:00:03\n",
-      "   ------- -------------------------------- 1.8/9.5 MB 3.3 MB/s eta 0:00:03\n",
-      "   ---------- ----------------------------- 2.6/9.5 MB 3.2 MB/s eta 0:00:03\n",
-      "   ------------- -------------------------- 3.1/9.5 MB 3.4 MB/s eta 0:00:02\n",
-      "   ----------------- ---------------------- 4.2/9.5 MB 3.5 MB/s eta 0:00:02\n",
-      "   ------------------- -------------------- 4.7/9.5 MB 3.5 MB/s eta 0:00:02\n",
-      "   ------------------------ --------------- 5.8/9.5 MB 3.7 MB/s eta 0:00:02\n",
-      "   --------------------------- ------------ 6.6/9.5 MB 3.7 MB/s eta 0:00:01\n",
-      "   ------------------------------ --------- 7.3/9.5 MB 3.7 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 8.1/9.5 MB 3.8 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 9.2/9.5 MB 3.8 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 9.5/9.5 MB 3.8 MB/s eta 0:00:00\n",
-      "Installing collected packages: patsy, statsmodels, category-encoders\n",
-      "Successfully installed category-encoders-2.9.0 patsy-1.0.2 statsmodels-0.14.6\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -129,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "949db8f2",
    "metadata": {},
    "outputs": [],
@@ -159,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "afe67f32",
    "metadata": {},
    "outputs": [
@@ -298,13 +252,13 @@
        "1.000000                        Auditivo        66.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('dataset_estudiantes.csv', index_col=0)\n",
+    "df = pd.read_csv('dataset_estudiantes_EDA.csv', index_col=0)\n",
     "\n",
     "df.head()"
    ]
@@ -319,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "52bd6166",
    "metadata": {},
    "outputs": [
@@ -332,7 +286,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "14aeed27",
    "metadata": {},
    "outputs": [
@@ -401,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "fb91915c",
    "metadata": {},
    "outputs": [],
@@ -421,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "9273d8bc",
    "metadata": {},
    "outputs": [
@@ -431,7 +385,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "a651e1c9",
    "metadata": {},
    "outputs": [
@@ -506,6 +460,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1cebda3d",
+   "metadata": {},
+   "source": [
+    "- `nota_anterior`: La mayoría de notas anteriores se concentran aproximadamente entre 60 y 80, sin valores extremadamente raros y con una dispersión moderada.\n",
+    "\n",
+    "- `tasa_asistencia`: La asistencia suele estar alta (sobre 60–90), pero aparece algún outlier muy bajo (en torno a 20) que indica casos puntuales de asistencia anormalmente baja.\n",
+    "\n",
+    "- `horas_sueno`: Las horas de sueño se agrupan sobre 6–8 horas, con variación pequeña y sin outliers relevantes (valores bastante estables).\n",
+    "\n",
+    "- `edad`: Las edades se concentran principalmente entre 21 y 27 años, sin outliers claros y con distribución bastante normal.\n",
+    "\n",
+    "- `nota_final`: La nota final se agrupa cerca de 65–78, pero hay outliers tanto muy bajos (más o menos 30–45) como muy altos (100), mostrando algunos casos extremos de rendimiento."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "839ca52e",
    "metadata": {},
    "source": [
@@ -514,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "66792cfa",
    "metadata": {},
    "outputs": [],
@@ -542,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "c29eb76e",
    "metadata": {},
    "outputs": [
@@ -635,7 +605,7 @@
        "1.000000                     50.8  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "3578afb5",
    "metadata": {},
    "outputs": [
@@ -749,7 +719,7 @@
        "14.827102                   100.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "cf3972cb",
    "metadata": {},
    "outputs": [],
@@ -789,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "a110ed6c",
    "metadata": {},
    "outputs": [
@@ -799,7 +769,7 @@
        "(0, 5)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "f76cda9b",
    "metadata": {},
    "outputs": [
@@ -820,7 +790,7 @@
        "(2, 5)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "a79ce199",
    "metadata": {},
    "outputs": [],
@@ -871,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "d54d3aac",
    "metadata": {},
    "outputs": [],
@@ -881,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "95366871",
    "metadata": {},
    "outputs": [
@@ -894,7 +864,7 @@
        " 'estilo_aprendizaje']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "e0e645c6",
    "metadata": {},
    "outputs": [],
@@ -927,12 +897,14 @@
    "id": "0af98923",
    "metadata": {},
    "source": [
-    "`OneHotEncoding`"
+    "`OneHotEncoding`\n",
+    "\n",
+    "Para convertir las columnas en binarias."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "de278453",
    "metadata": {},
    "outputs": [],
@@ -973,12 +945,14 @@
    "id": "80a8a1fb",
    "metadata": {},
    "source": [
-    "`TargetEncoding`"
+    "`TargetEncoding`\n",
+    "\n",
+    "Para convertir las variables categóricas en números."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "66fbcaaa",
    "metadata": {},
    "outputs": [],
@@ -1001,12 +975,14 @@
    "id": "988e0d18",
    "metadata": {},
    "source": [
-    "`MinMaxScaler`"
+    "`MinMaxScaler`\n",
+    "\n",
+    "Para transformar las variables numéricas ajustando su rango a uno fijo, 0 y 1. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "3b26755e",
    "metadata": {},
    "outputs": [],
@@ -1025,12 +1001,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "407d6059",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_reg.to_csv('dataset_estudiantes.csv')"
+    "df_reg.to_csv('df_regresion.csv')"
    ]
   },
   {
@@ -1053,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "e95c92bf",
    "metadata": {},
    "outputs": [],
@@ -1075,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "id": "4d8a839c",
    "metadata": {},
    "outputs": [],
@@ -1093,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "id": "e024372c",
    "metadata": {},
    "outputs": [],
@@ -1110,12 +1086,14 @@
    "id": "9c2d9581",
    "metadata": {},
    "source": [
-    "`OneHotEncoding`"
+    "`OneHotEncoding`\n",
+    "\n",
+    "Para convertir las columnas en binarias."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "id": "0e9476bc",
    "metadata": {},
    "outputs": [],
@@ -1140,29 +1118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "6325d742",
+   "execution_count": 30,
+   "id": "527b3bf1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Limpiamos nombres de columnas\n",
     "df_clas.columns = df_clas.columns.str.strip()\n",
     "\n",
-    "# Cambiamos aquí si el target se llama distinto\n",
-    "target_col = \"aprobado\"\n",
+    "# Creamos la variable 'aprobado' desde 'nota_final' con un umbral de 50.\n",
+    "UMBRAL = 50\n",
+    "df_clas[\"aprobado\"] = (df_clas[\"nota_final\"] >= UMBRAL).astype(int)\n",
     "\n",
-    "if target_col not in df_clas.columns:\n",
-    "    raise KeyError(f\"No existe '{target_col}'. Columnas disponibles: {df_clas.columns.tolist()}\")\n",
-    "\n",
-    "# Normalizamos a string para mapear, manteniendo números si ya lo son\n",
-    "if df_clas[target_col].dtype == \"object\":\n",
-    "    df_clas[target_col] = (\n",
-    "        df_clas[target_col]\n",
-    "        .astype(str).str.strip().str.lower()\n",
-    "        .map({\"yes\": 1, \"no\": 0, \"sí\": 1, \"si\": 1, \"no\": 0, \"1\": 1, \"0\": 0})\n",
-    "    )\n",
-    "else:\n",
-    "    # si ya es numérica, nos aseguramos de int\n",
-    "    df_clas[target_col] = df_clas[target_col].astype(int)\n"
+    "# Usamos aprobado como target\n",
+    "target_col = \"aprobado\"\n"
    ]
   },
   {
@@ -1170,12 +1139,14 @@
    "id": "b2a97f26",
    "metadata": {},
    "source": [
-    "`TargetEncoding`"
+    "`TargetEncoding`\n",
+    "\n",
+    "Para convertir las variables categóricas en números."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "id": "e4148c47",
    "metadata": {},
    "outputs": [],
@@ -1190,12 +1161,14 @@
    "id": "9bc38ab7",
    "metadata": {},
    "source": [
-    "`LabelEncoding`"
+    "`LabelEncoding`\n",
+    "\n",
+    "Para convertir las etiquetas categóricas en números enteros."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "id": "47ef4e94",
    "metadata": {},
    "outputs": [],
@@ -1217,12 +1190,14 @@
    "id": "e5563cd6",
    "metadata": {},
    "source": [
-    "`MinMaxScaler`"
+    "`MinMaxScaler`\n",
+    "\n",
+    "Para transformar las variables numéricas ajustando su rango a uno fijo, 0 y 1. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "id": "a3e44c1d",
    "metadata": {},
    "outputs": [],
@@ -1241,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "id": "3f641410",
    "metadata": {},
    "outputs": [],
