--- a/04-Clasificación.ipynb
+++ b/04-Clasificación.ipynb
@@ -1367,6 +1367,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "084ae220",
+   "metadata": {},
+   "source": [
+    "En esta matrix podemos ver qué acierta y qué falla el modelo:\n",
+    "\n",
+    "- 198 casos eran realmente 1 (aprobado) y el modelo predijo 1. Son aciertos.\n",
+    "- 2 casos eran realmente 0 (no aprobado) pero el modelo predijo 1. Son fallos (falsos positivos).\n",
+    "- 0 casos fueron predichos como 0 (ni aciertos ni fallos en esa clase).\n",
+    "\n",
+    "De los 200, el modelo está prediciendo casi todo como `aprobado` = 1, y por eso vemos que el modelo acierta mucho."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ef3a70d2",
    "metadata": {},
    "source": [
@@ -1484,6 +1498,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f049b819",
+   "metadata": {},
+   "source": [
+    "Calcula métricas en train y en test:\n",
+    "\n",
+    "- Accuracy = 0.99.\n",
+    "- Precision = 0.99.\n",
+    "- Recall = 1.0.\n",
+    "- F1-score = 0.99.\n",
+    "\n",
+    "Podemos ver que el modelo acierta casi siempre."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "f3e430b3",
@@ -1586,6 +1615,21 @@
    ],
    "source": [
     "df_metrics_weighted.round(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be58213e",
+   "metadata": {},
+   "source": [
+    "También calcula la versión “weighted” para intentar tener en cuenta los desbalances.\n",
+    "\n",
+    "- Accuracy = 0.99.\n",
+    "- Precision = 0.98.\n",
+    "- Recall = 0.99.\n",
+    "- F1-score = 0.99.\n",
+    "\n",
+    "Podemos ver que el modelo acierta también así casi siempre."
    ]
   },
   {
@@ -1780,6 +1824,19 @@
     "plt.axvline(0, color='black', linewidth=1)  # Línea en el 0 para referencia\n",
     "plt.gca().invert_yaxis()  # Invertir eje para que la más importante esté arriba\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a728d77d",
+   "metadata": {},
+   "source": [
+    "Este gráfico muestra qué variables empujan al modelo de clasificación a predecir `aprobado` o no aprobado:\n",
+    "\n",
+    "- Las barras a la derecha (coeficiente positivo) aumentan la probabilidad de aprobar.\n",
+    "- Las barras a la izquierda (coeficiente negativo) aumentan la probabilidad de no aprobar.\n",
+    "\n",
+    "La característica `nota_final` es con diferencia la más influyente. Lo hace positivamente."
    ]
   },
   {
@@ -2004,6 +2061,27 @@
    ],
    "source": [
     "df_metrics.round(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e5f373f",
+   "metadata": {},
+   "source": [
+    "En esta tabla podemos ver la comparación de las 3 variantes de regresión logística (Ridge/Lasso/ElasticNet) y sus métricas en train y test:\n",
+    "\n",
+    "- Todas sacan = 0.99 de Accuracy y = 0.98–0.99 en Precision/Recall/F1 (Weighted) tanto en entrenamiento como en prueba.\n",
+    "- Como train y test son casi iguales, no parece haber sobreajuste: el modelo rinde bien con datos nuevos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c374a79b",
+   "metadata": {},
+   "source": [
+    "### Conclusión final\n",
+    "\n",
+    "Viendo la matriz de confusión (casi todo predicho como 1) y porque aparece `nota_final` como variable importante, estos números tan altos probablemente se deben a que el modelo lo tiene “muy fácil” (clases muy desbalanceadas y/o “fuga de información”)."
    ]
   }
  ],
