--- a/01-EDA.ipynb
+++ b/01-EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "id": "77fff322",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "id": "e4e3ac5f",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "1.000000                        Auditivo        66.0         1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "id": "c5ae7143",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "id": "9a105045",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "id": "26bbbe0e",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "id": "3fdfbcc3",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "id": "b6db6513",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "id": "85413177",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "id": "346f3fdf",
    "metadata": {},
    "outputs": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "id": "99a9aabb",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
        "aprobado         1000.0   0.90   0.30   0.0   1.00   1.00   1.00    1.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "id": "421f68a4",
    "metadata": {},
    "outputs": [
@@ -680,6 +680,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b91fb5ac",
+   "metadata": {},
+   "source": [
+    "- `nota_anterior`: La mayoría de estudiantes se concentra entre 60 y 80, con pocos casos en valores muy bajos o muy altos.\n",
+    "- `tasa_asistencia`: Predomina una asistencia alta (en torno a 60–100) y se ve un pico muy fuerte en 100%, indicando muchos alumnos con asistencia perfecta.\n",
+    "- `horas_sueno`: Las horas de sueño se agrupan sobre todo entre 6 y 8 horas, con pocos estudiantes durmiendo muy poco o mucho.\n",
+    "- `edad`: Las edades están bastante repartidas entre 18 y 29, sin un pico dominante muy marcado.\n",
+    "- `nota_final`: La nota final se concentra principalmente entre 60 y 80, con una distribución tipo campana y algunos valores extremos.\n",
+    "- `aprobado`: La variable está muy desbalanceada: hay muchísimos más aprobados (1) que no aprobados (0)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d2abd322",
    "metadata": {},
    "source": [
@@ -696,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "id": "8be81d02",
    "metadata": {},
    "outputs": [
@@ -768,7 +781,7 @@
        "estilo_aprendizaje          950      4  Visual  363"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 75,
    "id": "4e49e196",
    "metadata": {},
    "outputs": [
@@ -918,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "id": "902527f6",
    "metadata": {},
    "outputs": [
@@ -982,6 +995,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6ac75e10",
+   "metadata": {},
+   "source": [
+    "- `nivel_dificultad`: Predominan los casos de dificultad medio, seguida de fácil, y difícil es la menos frecuente.\n",
+    "- `tiene_tutor`: Hay más estudiantes sin tutor que con tutor, aunque el grupo con tutor también es bastante numeroso.\n",
+    "- `horario_estudio_preferido`: La mayoría prefiere estudiar por noche o tarde, y mañana es la opción menos elegida.\n",
+    "- `estilo_aprendizaje`: El estilo más común es visual, seguido de auditivo, y los menos frecuentes son kinestésico y lectura/escritura."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "67e31231",
    "metadata": {},
    "source": [
@@ -1006,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "id": "d9ec9846",
    "metadata": {},
    "outputs": [
@@ -1044,6 +1068,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b4125dc",
+   "metadata": {},
+   "source": [
+    "El mapa de correlaciones muestra que `nota_final` se relaciona sobre todo con `nota_anterior` (= 0.47) y `tasa_asistencia` (= 0.32), y que `aprobado` depende fuertemente de `nota_final` (= 0.58), mientras que edad y `horas_sueno` apenas influyen (correlaciones cercanas a 0)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fa1260eb",
    "metadata": {},
    "source": [
@@ -1062,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 78,
    "id": "06ad9d7f",
    "metadata": {},
    "outputs": [
@@ -1146,8 +1178,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee70d634",
+   "metadata": {},
+   "source": [
+    "- `nota_anterior` vs `nota_final`: Se ve una relación positiva clara: cuanto mayor es la nota anterior, mayor suele ser la nota final, sin grandes diferencias por dificultad.\n",
+    "- `tasa_asistencia` vs `nota_final`: Hay una tendencia suave a mejores notas con más asistencia, aunque con bastante dispersión y muchos casos en 100%.\n",
+    "- `horas_sueno` vs `nota_final`: No aparece una relación fuerte: las notas están muy repartidas para casi cualquier cantidad de sueño.\n",
+    "- `edad` vs `nota_final`: No se aprecia un patrón claro: la edad apenas cambia la nota final.\n",
+    "- `aprobado` vs `nota_final`: Los no aprobados se concentran en 0 y los aprobados en 1, confirmando que aprobado depende de la nota final."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 79,
    "id": "813d652c",
    "metadata": {},
    "outputs": [
@@ -1226,6 +1270,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f70e2e59",
+   "metadata": {},
+   "source": [
+    "- `nivel_dificultad` vs `nota_final`: Las medianas son parecidas entre categorías, así que la dificultad no marca grandes diferencias en la nota final (aunque hay algunos outliers).\n",
+    "- `tiene_tutor` vs `nota_final`: Los alumnos con tutor 'Sí' tienden a tener una mediana más alta que los que no tienen tutor. Tiene outliers.\n",
+    "- `horario_estudio_preferido` vs `nota_final`: Las tres franjas muestran distribuciones muy similares, por lo que el horario parece influir poco en la nota final. Tiene outliers.\n",
+    "- `estilo_aprendizaje` vs `nota_final`: Las diferencias entre estilos son pequeñas y las medianas están muy cercanas, así que el estilo no parece determinante en la nota final. Tiene outliers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0db824b4",
    "metadata": {},
    "source": [
@@ -1236,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 80,
    "id": "35efbef7",
    "metadata": {},
    "outputs": [
@@ -1320,8 +1375,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "50e590f4",
+   "metadata": {},
+   "source": [
+    "- `nota_anterior` vs `aprobado` (con nivel_dificultad): En los tres niveles de dificultad se repite el patrón de que a mayor nota anterior, más probabilidad de aprobar, y no se ve que 'Difícil' cambie mucho esa relación.\n",
+    "- `tasa_asistencia` vs `aprobado`: Independientemente de si el curso es fácil/medio/difícil, una asistencia alta se asocia con más aprobados, aunque sigue habiendo mezcla de colores.\n",
+    "- `horas_sueno` vs `aprobado`: Para cualquier dificultad, las horas de sueño no separan bien aprobados de no aprobados; hay puntos de todos los colores en ambos grupos.\n",
+    "- `edad` vs `aprobado`: En todas las dificultades, la edad no marca diferencias claras: aprobados y no aprobados aparecen repartidos.\n",
+    "- `nota_final` vs `aprobado`: La separación es casi total en los tres niveles de dificultad: cuando la nota final es alta, prácticamente todos son aprobados, confirmando que aprobado depende directamente de nota_final."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 81,
    "id": "c9f3f367",
    "metadata": {},
    "outputs": [
@@ -1400,6 +1467,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5bfdef89",
+   "metadata": {},
+   "source": [
+    "- `nivel_dificultad` vs `aprobado`: En fácil, medio y difícil la mayoría son aprobados (1) y apenas hay diferencias visibles, lo que sugiere que la dificultad no está separando bien quién aprueba y quién no.\n",
+    "- `tiene_tutor` vs `aprobado`: Tanto con tutor como sin tutor predominan los aprobados, así que con este desbalance no se aprecia un efecto claro del tutor sobre aprobar.\n",
+    "- `horario_estudio_preferido` vs `aprobado`: En mañana/tarde/noche casi todos son aprobados, por lo que el horario no discrimina el resultado.\n",
+    "- `estilo_aprendizaje` vs `aprobado`: Ocurre lo mismo: en todos los estilos (visual, auditivo, etc.) casi todo es 1, así que el estilo no marca diferencias claras en aprobar.\n",
+    "\n",
+    "No tengo muy claro el análisis de esta parte."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "686c53e6",
    "metadata": {},
    "source": [
@@ -1408,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 82,
    "id": "8633fd7d",
    "metadata": {},
    "outputs": [],
@@ -1447,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 83,
    "id": "ab8681d6",
    "metadata": {},
    "outputs": [
@@ -1457,7 +1537,7 @@
        "Series([], Name: count, dtype: int64)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 84,
    "id": "213aac0e",
    "metadata": {},
    "outputs": [
@@ -1529,7 +1609,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1540,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 85,
    "id": "00c6d42b",
    "metadata": {},
    "outputs": [],
@@ -1558,12 +1638,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 86,
    "id": "4e4720cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('dataset_estudiantes.csv')"
+    "df.to_csv('dataset_estudiantes_EDA.csv')"
    ]
   }
  ],
