--- a/03-Regresión.ipynb
+++ b/03-Regresión.ipynb
@@ -1247,6 +1247,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c515089",
+   "metadata": {},
+   "source": [
+    "Si los puntos están cerca de la línea roja, el modelo acierta. En nuestro caso, sigue la tendencia, pero se dispersa bastante."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "17866958",
    "metadata": {},
    "source": [
@@ -1291,6 +1299,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e8fbdb2c",
+   "metadata": {},
+   "source": [
+    "En este gráfico podemos ver cómo se reparten las notas reales (azul) frente a las notas que predice el modelo (rojo):\n",
+    "- Como ambas distribuciones se solapan bastante, el modelo acierta la forma general.\n",
+    "- Las predicciones están más concentradas en el centro y hay menos valores en los extremos: el modelo tiende a la media, es decir, sube un poco las notas bajas y baja un poco las notas altas. Los valores reales se reparten por toda la distribución."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "47e391da",
    "metadata": {},
    "source": [
@@ -1331,6 +1349,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b9a3429",
+   "metadata": {},
+   "source": [
+    "Lo ideal es que los residuos estén en torno al 0 (línea roja) pero ya vemos que están muy dispersos de este valor tanto por arriba como por abajo. Esto significa que el modelo se equivoca por arriba y por abajo de 0. Encontamos también algunos outliers."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "c0bca3ac",
@@ -1358,6 +1384,16 @@
     "\n",
     "# Mostrar gráfico\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21d12f95",
+   "metadata": {},
+   "source": [
+    "En este histograma podemos observar cómo se reparten los residuos del modelo:\n",
+    "- La mayoría de residuos están cerca de 0, así que muchas predicciones salen bien.\n",
+    "- Hay residuos tanto positivos como negativos, o sea, a veces se queda corto y otras se pasa."
    ]
   },
   {
@@ -1574,6 +1610,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6e4cafaa",
+   "metadata": {},
+   "source": [
+    "Este gráfico muestra los coeficientes del modelo de regresión (qué variables empujan la `nota_final` hacia arriba o hacia abajo):\n",
+    "\n",
+    "- Las barras a la derecha (positivas) aumentan la nota predicha.\n",
+    "- Las barras a la izquierda (negativas) bajan la nota predicha.\n",
+    "\n",
+    "Las características que más influyen son `nota_anterior` y `tasa_asistencia`. Ambas lo hacen positivamente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "021e8aa1",
    "metadata": {},
    "source": [
@@ -1679,6 +1728,20 @@
    ],
    "source": [
     "df_metrics.round(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d6964c3",
+   "metadata": {},
+   "source": [
+    "La tabla muestra:\n",
+    "\n",
+    "- R2 (test = 0.33): el modelo explica aproximadamente un 33% de la variación de la nota final (nivel medio-bajo, hay margen de mejora).\n",
+    "- MAE (test = 6.04): de media. Se equivoca unas 6 notas/puntos.\n",
+    "- RMSE (test = 7.43): error típico más exigente. Penaliza más los fallos grandes (= 7.4 puntos).\n",
+    "\n",
+    "Train y test salen muy parecidos (R2 0.32 vs 0.33, errores similares), así que no parece sobreajustado: no memoriza, pero tampoco es súper preciso."
    ]
   },
   {
@@ -1853,6 +1916,31 @@
    ],
    "source": [
     "df_metrics.round(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a77fb7c",
+   "metadata": {},
+   "source": [
+    "Se compara con:\n",
+    "\n",
+    "- Linear.\n",
+    "- Ridge.\n",
+    "- Lasso.\n",
+    "- ElasticNet.\n",
+    "\n",
+    "Linear, Ridge y Lasso salen muy parecidos en test (R2 = 0.33, MAE = 6, RMSE = 7.4). ElasticNet empeora (R2 = 0.28).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a82d0980",
+   "metadata": {},
+   "source": [
+    "### Conclusión final\n",
+    "\n",
+    "El modelo predice con tendencia correcta, pero con un error típico de 6–7 puntos, y explica solo 1/3 de lo que pasa en las notas."
    ]
   }
  ],
